src/main/java/com/example/goodToKnow/errors/SubjectNotFoundException.java
package com.example.goodToKnow.errors;

public class SubjectNotFoundException extends RuntimeException {
  public SubjectNotFoundException() {
    super("Subject not found");
  }
}
